Изменение и исправление ошибок

--- a/.github/form.html
+++ b/.github/form.html
@@ -124,103 +124,103 @@
     <form>
         <dl>
           <dt>
-            <input type="checkbox" id="pseudo-element" checked>
-            <label for="pseudo-element">::before</label>
+            <input type="checkbox" id="element" checked>
+            <label for="element">::before</label>
           </dt>
           <dd>
-            <input type="checkbox" id="pseudo-element-definition" checked>
-            <label for="pseudo-element-definition">Добавляет контент перед содержимым выбранного элемента.</label>
+            <input type="checkbox" id="element-definition" checked>
+            <label for="element-definition">Добавляет контент перед содержимым выбранного элемента.</label>
           </dd>
           <dt>
-            <input type="checkbox" id="pseudo-element">
-            <label for="pseudo-element">::after</label>
+            <input type="checkbox" id="element">
+            <label for="element">::after</label>
           </dt>
           <dd>
-            <input type="checkbox" id="pseudo-element-definition">
-            <label for="pseudo-element-definition">Добавляет контент после содержимого выбранного элемента.</label>
+            <input type="checkbox" id="element-definition">
+            <label for="element-definition">Добавляет контент после содержимого выбранного элемента.</label>
           </dd>
           <dt>
-            <input type="checkbox" id="pseudo-element">
-            <label for="pseudo-element">::first-line</label>
+            <input type="checkbox" id="element">
+            <label for="element">::first-line</label>
           </dt>
           <dd>
-            <input type="checkbox" id="pseudo-element-definition">
-            <label for="pseudo-element-definition">Применяет стили к первой строке текста внутри выбранного элемента.</label>
+            <input type="checkbox" id="element-definition">
+            <label for="element-definition">Применяет стили к первой строке текста внутри выбранного элемента.</label>
           </dd>
           <dt>
-            <input type="checkbox" id="pseudo-element">
-            <label for="pseudo-element">::first-letter</label>
+            <input type="checkbox" id="element">
+            <label for="element">::first-letter</label>
           </dt>
           <dd>
-            <input type="checkbox" id="pseudo-element-definition">
-            <label for="pseudo-element-definition">Применяет стили к первой букве текста внутри выбранного элемента.</label>
+            <input type="checkbox" id="element-definition">
+            <label for="element-definition">Применяет стили к первой букве текста внутри выбранного элемента.</label>
           </dd>
         </dl>
     
         <dl>
           <dt>
-            <input type="checkbox" id="pseudo-class" checked>
-            <label for="pseudo-class">:hover</label>
+            <input type="checkbox" id="class" checked>
+            <label for="class">:hover</label>
           </dt>
           <dd>
-            <input type="checkbox" id="pseudo-class-definition" checked>
-            <label for="pseudo-class-definition">Применяет стили, когда пользователь наводит курсор на элемент.</label>
+            <input type="checkbox" id="class-definition" checked>
+            <label for="class-definition">Применяет стили, когда пользователь наводит курсор на элемент.</label>
           </dd>
           <dt>
-            <input type="checkbox" id="pseudo-class" checked>
-            <label for="pseudo-class">:active</label>
+            <input type="checkbox" id="class" checked>
+            <label for="class">:active</label>
           </dt>
           <dd>
-            <input type="checkbox" id="pseudo-class-definition" checked>
-            <label for="pseudo-class-definition">Применяет стили к элементу в момент его активации.</label>
+            <input type="checkbox" id="class-definition" checked>
+            <label for="class-definition">Применяет стили к элементу в момент его активации.</label>
           </dd>
           <dt>
-            <input type="checkbox" id="pseudo-class" checked>
-            <label for="pseudo-class">:focus</label>
+            <input type="checkbox" id="class" checked>
+            <label for="class">:focus</label>
           </dt>
           <dd>
-            <input type="checkbox" id="pseudo-class-definition" checked>
-            <label for="pseudo-class-definition">Применяет стили к элементу, на который установлен фокус.</label>
+            <input type="checkbox" id="class-definition" checked>
+            <label for="class-definition">Применяет стили к элементу, на который установлен фокус.</label>
           </dd>
           <dt>
-            <input type="checkbox" id="pseudo-class" checked>
-            <label for="pseudo-class">:nth-child(n)</label>
+            <input type="checkbox" id="class" checked>
+            <label for="class">:nth-child(n)</label>
           </dt>
           <dd>
-            <input type="checkbox" id="pseudo-class-definition" checked>
-            <label for="pseudo-class-definition">Применяет стили к каждому n-ному элементу.</label>
+            <input type="checkbox" id="class-definition" checked>
+            <label for="class-definition">Применяет стили к каждому n-ному элементу.</label>
           </dd>
           <dt>
-            <input type="checkbox" id="pseudo-class">
-            <label for="pseudo-class">:nth-of-type(n)</label>
+            <input type="checkbox" id="class">
+            <label for="class">:nth-of-type(n)</label>
           </dt>
           <dd>
-            <input type="checkbox" id="pseudo-class-definition">
-            <label for="pseudo-class-definition">Применяет стили к каждому n-ному элементу определенного типа.</label>
+            <input type="checkbox" id="class-definition">
+            <label for="class-definition">Применяет стили к каждому n-ному элементу определенного типа.</label>
           </dd>
           <dt>
-            <input type="checkbox" id="pseudo-class">
-            <label for="pseudo-class">:not(selector)</label>
+            <input type="checkbox" id="class">
+            <label for="class">:not(selector)</label>
           </dt>
           <dd>
-            <input type="checkbox" id="pseudo-class-definition">
-            <label for="pseudo-class-definition">Применяет стили к элементу, который не соответствует указанному селектору</label>
+            <input type="checkbox" id="class-definition">
+            <label for="class-definition">Применяет стили к элементу, который не соответствует указанному селектору</label>
           </dd>
           <dt>
-            <input type="checkbox" id="pseudo-class" checked>
-            <label for="pseudo-class">:checked</label>
+            <input type="checkbox" id="class" checked>
+            <label for="class">:checked</label>
           </dt>
           <dd>
-            <input type="checkbox" id="pseudo-class-definition" checked>
-            <label for="pseudo-class-definition">Применяет стили к выбранным элементам.</label>
+            <input type="checkbox" id="class-definition" checked>
+            <label for="class-definition">Применяет стили к выбранным элементам.</label>
           </dd>
           <dt>
-            <input type="checkbox" id="pseudo-class">
-            <label for="pseudo-class">:disabled</label>
+            <input type="checkbox" id="class">
+            <label for="class">:disabled</label>
           </dt>
           <dd>
-            <input type="checkbox" id="pseudo-class-definition">
-            <label for="pseudo-class-definition">Применяет стили к отключенным элементам формы.</label>
+            <input type="checkbox" id="class-definition">
+            <label for="class-definition">Применяет стили к отключенным элементам формы.</label>
           </dd>
         </dl>
     </form>
@@ -234,7 +234,9 @@
                 <img src="img/Logo-first.svg">
             </picture>
         </a>
-        <a href="grid.html" class="about-second-grid">Grid</a>
+        <a href="demo.html" class="about-second-grid">Demo</a>
+        <a href="form.html" class="about-second-grid-two">Форма</a>
+        <a href="grid.html" class="about-second-grid-two">Grid</a>
           <a href="" class="about-second">About</a>
           <a href="" class="Jobs">Jobs</a>
           <a href="" class="Legal">Legal</a>
@@ -266,10 +268,14 @@
         </svg>
         </a>
     <ul class="list-footer">
-        <li class="footer-list-first"><a href="grid.html" class="about-grid">Grid</a></li>
         <li class="footer-list-first"><a href="" class="about">About</a></li>
         <li class="footer-list-second"><a href="" class="about">Jobs</a></li>
         <li class="footer-list-third"><a href="" class="about">Legal</a></li>
+    </ul>
+    <ul class="list-footer-div">
+        <li class="footer-list-first"><a href="demo.html" class="about-grid">Demo</a></li>
+        <li class="footer-list-second"><a href="form.html" class="about-grid">Форма</a></li>
+        <li class="footer-list-first"><a href="grid.html" class="about-grid">Grid</a></li>
     </ul>
     <ul class="back-list">
         <li class="twitter"><a href=""><img src="img/Frame 5609.svg" alt="Twitter"></a></li>
