--- a/.github/index.html
+++ b/.github/index.html
@@ -17,7 +17,6 @@
             </picture>
             <span class="sr-only">Главная</span>
         </a>
-        <a href="form.html" class="product-forma">Форма</a>
         <a href="" class="product">Product</a>
         <a href="" class="product">Use cases</a>
         <a href="" class="product">Learn</a>
@@ -438,7 +437,9 @@
                 </picture>
                 <span class="sr-only">Главная</span>
             </a>
-            <a href="grid.html" class="about-second-grid">Grid</a>
+            <a href="demo.html" class="about-second-grid">Demo</a>
+            <a href="form.html" class="about-second-grid-two">Форма</a>
+            <a href="grid.html" class="about-second-grid-two">Grid</a>
               <a href="" class="about-second">About</a>
               <a href="" class="Jobs">Jobs</a>
               <a href="" class="Legal">Legal</a>
@@ -472,10 +473,14 @@
             <span class="sr-only">Главная</span>
             </a>
         <ul class="list-footer">
-            <li class="footer-list-first"><a href="grid.html" class="about-grid">Grid</a></li>
             <li class="footer-list-first"><a href="" class="about">About</a></li>
             <li class="footer-list-second"><a href="" class="about">Jobs</a></li>
             <li class="footer-list-third"><a href="" class="about">Legal</a></li>
+        </ul>
+        <ul class="list-footer-div">
+            <li class="footer-list-first"><a href="demo.html" class="about-grid">Demo</a></li>
+            <li class="footer-list-second"><a href="form.html" class="about-grid">Форма</a></li>
+            <li class="footer-list-first"><a href="grid.html" class="about-grid">Grid</a></li>
         </ul>
         <ul class="back-list">
             <li class="twitter"><a href=""><img src="img/Frame 5609.svg" alt="Twitter"></a></li>
