--- a/.github/demo.html
+++ b/.github/demo.html
@@ -56,10 +56,13 @@
         <a href="index.html" class="svg-div">
             <picture>
                 <source srcset="img/Logo.svg" media="(min-width: 1200px)">
-                <img src="img/Logo-first.svg">
+                <img src="img/Logo-first.svg" alt="Logotip">
             </picture>
+            <span class="sr-only">Главная</span>
         </a>
-        <a href="grid.html" class="about-second-grid">Grid</a>
+        <a href="demo.html" class="about-second-grid">Demo</a>
+        <a href="form.html" class="about-second-grid-two">Форма</a>
+        <a href="grid.html" class="about-second-grid-two">Grid</a>
           <a href="" class="about-second">About</a>
           <a href="" class="Jobs">Jobs</a>
           <a href="" class="Legal">Legal</a>
@@ -68,7 +71,7 @@
           <a href="" class="youtube-div"><img src="img/Frame (1).svg" alt="Youtube"></a>
           <a href="" class="discord-div"><img src="img/Frame 5617.svg" alt="Discord"></a>
     </div>
-    <a href=""><svg width="140" height="24" viewBox="0 0 140 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="image-footer">
+    <a href=""><svg width="140" height="24" viewBox="0 0 140 24" fill="none" xm6378lns="http://www.w3.org/2000/svg" class="image-footer" alt="Logotip">
         <path d="M51.8936 6.83594C55.0665 6.83594 57.2056 8.10154 57.2056 10.5793V11.1675H54.3535V10.5793C54.3535 9.58105 53.4266 9.08194 51.8936 9.08194H51.5728C50.0041 9.08194 49.1128 9.5454 49.1128 10.2228V10.401C49.1128 11.221 49.8259 11.4527 52.7136 11.934C55.9756 12.5222 57.4195 13.4848 57.4195 15.4991V15.6773C57.4195 17.6916 55.6013 19.1355 51.9471 19.1355H51.6084C47.9185 19.1355 46.0469 17.6738 46.0469 15.1961V14.6435H48.8989V15.1961C48.8989 16.4617 49.8793 16.8716 51.6262 16.8716H51.9471C53.6048 16.8716 54.5318 16.4795 54.5318 15.713V15.5526C54.5318 14.7861 53.6761 14.4474 50.8063 13.9839C47.7938 13.5026 46.2251 12.5935 46.2251 10.5436V10.3119C46.2251 8.10154 48.2572 6.83594 51.5728 6.83594H51.8936Z" fill="white"/>
         <path d="M66.138 18.9569V17.7626H65.7636C65.2111 18.6004 64.195 19.1352 62.769 19.1352H62.4659C60.2556 19.1352 59.0078 17.9409 59.0078 15.3384V9.8125H61.8599V14.8214C61.8599 16.087 62.5194 16.7822 63.8385 16.7822H64.1415C65.4606 16.7822 66.138 16.087 66.138 14.8214V9.8125H68.99V18.9569H66.138Z" fill="white"/>
         <path d="M73.9068 9.81204V10.935H74.2811C74.9406 10.1151 75.921 9.63379 77.2936 9.63379H77.6144C79.9317 9.63379 81.6252 10.935 81.6252 13.8584V14.9101C81.6252 17.8335 79.9317 19.1347 77.6144 19.1347H77.2936C75.8854 19.1347 74.9228 18.6374 74.2811 17.7978H73.9068V23.2346H71.0547V9.81204H73.9068ZM73.9068 13.8228V14.9279C73.9068 16.2648 74.8158 16.9066 76.1706 16.9066H76.4914C77.864 16.9066 78.7731 16.247 78.7731 14.9279V13.8228C78.7731 12.5215 77.864 11.862 76.4914 11.862H76.1706C74.8158 11.862 73.9068 12.5037 73.9068 13.8228Z" fill="white"/>
@@ -90,12 +93,17 @@
         </linearGradient>
         </defs>
         </svg>
+        <span class="sr-only">Главная</span>
         </a>
     <ul class="list-footer">
-        <li class="footer-list-first"><a href="grid.html" class="about-grid">Grid</a></li>
         <li class="footer-list-first"><a href="" class="about">About</a></li>
         <li class="footer-list-second"><a href="" class="about">Jobs</a></li>
         <li class="footer-list-third"><a href="" class="about">Legal</a></li>
+    </ul>
+    <ul class="list-footer-div">
+        <li class="footer-list-first"><a href="demo.html" class="about-grid">Demo</a></li>
+        <li class="footer-list-second"><a href="form.html" class="about-grid">Форма</a></li>
+        <li class="footer-list-first"><a href="grid.html" class="about-grid">Grid</a></li>
     </ul>
     <ul class="back-list">
         <li class="twitter"><a href=""><img src="img/Frame 5609.svg" alt="Twitter"></a></li>
